--- a/staffpos1.html
+++ b/staffpos1.html
@@ -72,13 +72,10 @@
         <button id="complete-button">Complete Order</button>
     </div>
 
-    <audio id="alert-sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
-
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script>
         // Initialize Supabase
         const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
-        const alertSound = document.getElementById('alert-sound');
 
         let currentOrderId = localStorage.getItem('currentOrderId') || null;
 
@@ -161,7 +158,7 @@
         async function acceptOrder(id) {
             console.log(`Accepting order with ID: ${id}`);
             if (currentOrderId) {
-                alert('You must complete the current order before accepting a new one.');
+                // User is already working on an order
                 return;
             }
 
@@ -175,10 +172,6 @@
                 console.error('Error updating order status:', error);
                 return;
             }
-
-            // Play sound for alert
-            alertSound.play();
-            alert('Accepted order.');
 
             // Save the current order ID in local storage
             localStorage.setItem('currentOrderId', id);
@@ -223,9 +216,12 @@
                 return;
             }
 
-            // Play sound for alert
-            alertSound.play();
-            alert('Order completed. Notifying user to pick up.');
+            // Remove the current order ID from local storage
+            localStorage.removeItem('currentOrderId');
+            currentOrderId = null;
+
+            // Hide order details
+            document.getElementById('order-details').style.display = 'none';
 
             // Notify user via serverless function
             await fetch('/api/complete-order', {
@@ -235,13 +231,6 @@
                 },
                 body: JSON.stringify({ orderId: id }),
             });
-
-            // Hide order details
-            document.getElementById('order-details').style.display = 'none';
-
-            // Clear the current order ID from local storage
-            localStorage.removeItem('currentOrderId');
-            currentOrderId = null;
 
             // Reload orders
             loadOrders();
