--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
                         // Treat PGRST116 error as a completed order
                         if (!localStorage.getItem('completeNotify')) {
                             localStorage.setItem('completeNotify', 'true');
+                            document.title = "Your order is complete"
                             playSound(); // Play sound for completed
                             showPopup('completed-popup');
                             // Reset notification flags
@@ -382,6 +383,7 @@
                     if (order.status === 'inprogress') {
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
+                            document.title = "Order in progress"
                             playSound(); // Play sound for in progress
                             showPopup('inprogress-popup');
                         }
