--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 300px;
+            width: 100%;
+            max-width: 400px;
             text-align: center;
             display: none;
         }
@@ -47,33 +48,33 @@
         .popup {
             display: none;
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 90%;
+            max-width: 400px;
+            background-color: #fff;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             padding: 20px;
             z-index: 1000;
-            overflow: auto;
             text-align: center;
+            overflow: auto;
         }
         .popup.show {
             display: block;
         }
         .popup .title {
-            font-size: 24px;
+            font-size: 22px;
             font-weight: bold;
             margin-bottom: 10px;
         }
         .popup .message {
             margin-bottom: 20px;
-            font-size: 18px;
+            font-size: 16px;
         }
         .popup .checkmark {
-            font-size: 100px;
+            font-size: 80px;
             color: #28a745;
             margin-bottom: 20px;
         }
@@ -84,7 +85,7 @@
             color: #fff;
             cursor: pointer;
             padding: 10px;
-            font-size: 14px;
+            font-size: 16px;
         }
         .popup button:hover {
             background-color: #c82333;
@@ -93,10 +94,11 @@
         #welcome-popup {
             display: block; /* Display on page load */
             position: fixed;
-            top: 20%;
+            top: 30%;
             left: 50%;
             transform: translateX(-50%);
-            width: 300px;
+            width: 90%;
+            max-width: 400px;
             background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
             border-radius: 8px;
@@ -129,7 +131,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 15px;
-            width: 200px;
+            width: 100%;
+            max-width: 180px;
             text-align: center;
         }
         .drink-card h3 {
@@ -149,14 +152,13 @@
         .drink-card button:hover {
             background-color: #0056b3;
         }
-        #drink-details {
-            display: none;
-        }
-        #drink-details h2 {
-            margin-bottom: 15px;
-        }
-        #drink-details p {
-            margin-bottom: 15px;
+        @media (max-width: 600px) {
+            #menu, #order-form, #drink-details {
+                width: 90%;
+            }
+            .popup {
+                width: 90%;
+            }
         }
     </style>
 </head>
@@ -224,19 +226,17 @@
     document.getElementById('explore-button').addEventListener('click', async () => {
         document.getElementById('welcome-popup').style.display = 'none';
         document.getElementById('menu').style.display = 'block';
-            // Play intro sound muted
-            welcome.play();
-                await fetchDrinks();
-            renderDrinkCards();
-            sound.muted = true; // Mute audio
-            sound.play().catch(error => {
-                console.error('Error playing intro sound:', error);
-            });
-
-            sound.onended = function(){
-                sound.muted = false; // Unmute audio
-            };
+        await fetchDrinks();
+        renderDrinkCards();
+        sound.muted = true; // Mute audio
+        sound.play().catch(error => {
+            console.error('Error playing intro sound:', error);
         });
+
+        sound.onended = function(){
+            sound.muted = false; // Unmute audio
+        };
+    });
 
     async function fetchDrinks() {
         const { data, error } = await supabase
@@ -345,6 +345,10 @@
         const popup = document.getElementById(popupId);
         if (popup) {
             popup.classList.remove('show');
+            if (popupId === 'success-popup') {
+                document.getElementById('order-form').style.display = 'none';
+                document.getElementById('menu').style.display = 'block';
+            }
         }
     }
 
